# backend-i

./: .gitignore  compose.yaml  dockerfile  hello.py
AI-IMAGE-GENERATOR/: Compose.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
AI-IMAGE-GENERATOR/characters/: admin.py  forms.py  image_service.py  models.py  urls.py  views.py
AI-IMAGE-GENERATOR/characters/migrations/: 0001_initial.py  0002_character_image_url.py
AI-IMAGE-GENERATOR/characters/templates/characters/: character_confirm_delete.html  character_edit.html  character_list.html  character_update.html  create_character.html
AI-IMAGE-GENERATOR/characters/tests/: test_views.py
AI-IMAGE-GENERATOR/dali/: asgi.py  settings.py  urls.py  wsgi.py
FINAL_PROJECT/src/final_project/: character.json  models.py
S1/: pyproject.toml
S1/src/s1/: main.py
S10/: pyproject.toml
S10/src/s10/: http_server.py
S11/: pyproject.toml
S11/src/s11/: main.py
S11/tests/: test_main.py
S12/: Dockerfile  README.md  makefile  pyproject.toml
S12/src/s12/: database.py  main.py  models.py
S12/tests/: test_api.py
S12_S13/: .dockerignore  compose.yaml  pyproject.toml
S12_S13/src/s12/: main.py  models.py
S14/: Makefile  README.md
S14/djproject/: settings.py
S14/todo/: admin.py  models.py  urls.py  views.py
S14_S15/: README.md  pyproject.toml
S14_S15/djproject/: settings.py
S14_S15/todo/: urls.py  views.py
S14_S15/todo/migrations/: 0001_initial.py
S14_S15/todo/templates/todo/: index.html  task_list.html
S14_S15_S16/: Dockerfile  README.md  compose.yaml  pyproject.toml
S14_S15_S16/djproject/: settings.py  urls.py
S14_S15_S16/todo/: admin.py  forms.py  urls.py  views.py
S14_S15_S16/todo/templates/: base.html
S14_S15_S16/todo/templates/todo/: task_list.html
S14_S15_S16/todo/tests/: test_views.py
S14_S15_S16_S17/: Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
S14_S15_S16_S17/djproject/: settings.py
S14_S15_S16_S17/todo/: models.py
S2/: pyproject.toml
S2/src/s2/: comprehensions.py  ex1.py  functions.py
S3/: pyproject.toml
S3/src/s3/: classes.py  ex1.py  store.py
S4/: pyproject.toml
S4/src/s4/: challenge.py  iterators.py
S5/: pyproject.toml
S5/src/s5/: challenge.py  challenge1.py  challenge2.py  ex1.py  log.py  log1.py  sleep.py  uptime.py
S6/: pyproject.toml
S6/src/s6/: challenge.py  exercise.py
S6/tests/: test_challenge.py  test_exercise.py  test_fixtures.py  test_sample.py
S7/: pyproject.toml
S7/src/s7/: context_decorator.py  context_manager.py  context_manager1.py  example.txt  sqlite.py  user_registration.db
S8/: pyproject.toml
S8/src/s8/: app.py  challenge.py  exercise.py  main.py  run.py
S8/tests/: test_exercise.py
S9/: pyproject.toml
S9/src/s9/: bot.py  typer.py
djproject/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
djproject/djproject/: settings.py  urls.py
djproject/todo/templates/: base.html
fastapi_project/: Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
fastapi_project/src/fastapi_project/: database.py  main.py  models.py
fastapi_project/tests/: test_api.py
teste_fastapi_final_project/: .dockerignore  Compose.yaml  Makefile  pyproject.toml
teste_fastapi_final_project/src/final_project/: character.json  main.py
