[project]
name = "ai-image-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "luis-barbara",email = "luis.carlos.barbara@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "openai (>=1.68.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "ai_image_generator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
