[project]
name = "s7"
version = "0.1.0"
description = ""
authors = [
    {name = "luis-barbara",email = "luisbarbara@live.com.pt"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "s7", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
